[package]
name = "aet-tools-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.47"
web-sys = "0.3.74"
js-sys = "0.3.74"
serde = { version = "1.0.215", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
yew-router = "0.18.0"
wasm-logger = "0.2.0"
log = { version = "0.4.22", features = ["kv", "kv_serde"] }
serde_json = { version = "1.0.133", features = ["preserve_order"] }

[workspace]
members = ["src-tauri"]
