[package]
name = "aet-tools-ui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
js-sys = "0.3.82"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
yew-router = "0.18.0"
wasm-logger = "0.2.0"
log = { version = "0.4.28", features = ["kv", "kv_serde"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
yewlish-checkbox = "0.1.12"

[workspace]
members = ["src-tauri"]
