[package]
name = "aet-tools"
version = "0.1.0"
description = "Bunch of tools utilized by the Antistasi Event Team"
authors = ["Esmeray"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.7", features = [
    "dialog-open",
    "updater",
    "shell-open",
    "process-command-api",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
scraper = "0.20.0"
strum_macros = "0.26.2"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
