[package]
name = "aet-tools"
version = "2.5.2"
description = "Bunch of tools utilized by the Antistasi Event Team"
authors = ["Sky"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
scraper = "0.24.0"
strum_macros = "0.27.2"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.3.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"
